[package]
name = "happy_face"
version = "0.1.0"
authors = ["jacob"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message-io = "0.10"
serde = { version = "1.0", features = ["derive"]}
# serde_json = "1.0.63"
bincode = "1.3.1"
